<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_activity_main" />
    <string name="app_name">EASY HODLING</string>
    <string name="logo">EasyHodling logo</string>

    <!--Menu Lateral-->
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="nav_header_title">EasyHodling</string>
    <string name="nav_header_subtitle">easy.hodling@iso.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_wallet">Cartera</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_forum">Foro</string>
    <string name="menu_trading">Trading</string>
    <string name="menu_learning">Cursos</string>
    <string name="menu_about">Sobre nosotros</string>

    <!--Hints-->
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="passwordrepeat">Repetir Contraseña</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="email">Email</string>
    <string name="percentage">Porcentaje</string>
    <string name="limit">Límite</string>
    <string name="coin_par">Par de moneda</string>
    <string name="api_key">Api key</string>
    <string name="api_secret">Api secret</string>
    <string name="coin_to_operate">Moneda a operar…</string>
    <string name="coin_to_use">Moneda a usar…</string>
    <string name="quantity">Cantidad con decimales</string>

    <!--Textos-->
    <string name="total_wallet">TOTAL $ EN WALLET:</string>
    <string name="coin_type">MONEDA</string>
    <string name="dollar_quantity">$</string>
    <string name="coin_quantity">CANTIDAD DE MONEDA</string>
    <string name="help">Para consultas sobre la aplicación o sobre como operar, contactar con \n<b>gonzaloechevarria5@gmail.com</b>.\nGracias.</string>
    <string name="about_us">Somos el grupo 2 de la asignatura de Ingeniería del Software.\nSe ha desarrollado la app siguiendo la metodología explicada a lo largo de la asignatura.\n\nEl grupo se compone de:\n
    Samuel Aragonés\n
    Gonzalo Echevarría\n
    Elisa Coellon\n
    Miguel Melero</string>
    <string name="welcome_text">Bienvenido a\nEASYHODLING</string>
    <string name="recuperar_contrasena">Contraseña recuperada</string>

    <!--Botones-->
    <string name="signin_bt">Entrar</string>
    <string name="signup_bt">Crear cuenta</string>
    <string name="back">Volver</string>
    <string name="config">Configuración</string>
    <string name="save">Guardar</string>
    <string name="demo">Modo demo</string>
    <string name="real">Modo real</string>
    <string name="apis">Apis</string>
    <string name="params">Parámetros</string>
    <string name="forum">Foro</string>
    <string name="tradingbt">Cursos Trading</string>
    <string name="exclusion">AutoExclusión</string>
    <string name="forgotpswd">Recuperar contraseña</string>
    <string name="buy">Comprar</string>
    <string name="sell">Vender</string>

    <!--Test-->
    <!--PREGUNTAS-->
    <string name="quest1">¿Cuál es la frecuencia con la que juegas a juegos de azar?</string>
    <string name="quest2">¿Has tenido la sensación de que deberías reducir tu conducta de juego?</string>
    <string name="quest3">¿Niegas, ocultas o minimizas las veces que vas a jugar, las apuestas que haces o la cantidad que te juegas o pierdes?</string>
    <string name="quest4">Has tenido problemas con el juego como por ejemplo alguna pelea familiar, problemas en el trabajo, problemas económicos o de sueño.</string>
    <string name="quest5"> Finalmente, ¿Te sientes impulsado a jugar a pesar de tus problemas y no puedes dejarlo?</string>

    <!--RESPUESTAS-->
    <!--PREGUNTA1-->
    <string name="answer11">1 o 2 veces por semana</string>
    <string name="answer12">3 o 4 veces por semana</string>
    <string name="answer13">Todos los días</string>
    <string name="answer14">1 vez cada 2 semanas o menos</string>

    <!--RESTO PREGUNTAS-->
    <string name="answer1">Sí</string>
    <string name="answer2">No, nunca</string>
    <string name="answer3">A veces sí</string>
    <!--RECUPERAR CONTRASEÑA -->
    <string name="correo">Introduce tu correo electrónico</string>
    <string name="mailbt">Enviar email</string>
    <!--Toast-->
    <string name="inicio">Bienvenido a Hodling</string>
    <string name="login">Sesión iniciada!</string>
    <string name="loginerror_blank">Usuario o contraseña vacíos</string>
    <string name="loginerror_credentials">Usuario o contraseña incorrectos</string>
    <string name="loginerror_existing_user">Nombre de usuario o email no disponible…</string>
    <string name="email_error">Email incorrecto</string>
    <string name="user_created">Usuario creado!</string>
    <string name="sign_up_blank">No puede haber ningún campo vacío…</string>
    <string name="user_db_recover_error">Error al recuperar usuario de la base de datos</string>
    <string name="limitebien">Límite correctamente establecido</string>
    <string name="limitemal">Límite incorrecto</string>
    <string name="testsave">Test guardado con éxito</string>
    <string name="excluded">Tu cuenta ha sido bloqueada y no podrá volver a acceder</string>
    <string name="correoinvalido">Correo invalido</string>
    <string name="email_blank">No puede estar el correo vacío</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="password_dont_match">Las contraseñas no coinciden</string>
    <string name="buy_completed">Orden de compra completada!!</string>
    <string name="sell_completed">Orden de venta completada!!</string>
    <string name="insuficient_funds">Fondos insuficientes…</string>
    <string name="inexistent_coin">La moneda no existe…</string>

</resources>