<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_wallet"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_menu_forum"
            android:title="@string/menu_forum" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>