<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="190dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/usernameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/user"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>

                <EditText
                    android:id="@+id/nameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>

                <EditText
                    android:id="@+id/surnameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"/>

                <EditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"/>

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
                <EditText
                    android:id="@+id/passwordRepe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:ems="10"
                    android:hint="@string/passwordrepeat"/>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/signinBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp"
            android:onClick="addUser"
            android:text="@string/signup_bt" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>