<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".survey.SurveyActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="190dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/logo"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/preg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/quest1"
                android:textSize="16sp"/>
            <RadioGroup
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/answer1_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer11"
                    tools:ignore="DuplicateIds"/>
                <RadioButton
                    android:id="@+id/answer1_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer12"/>
                <RadioButton
                    android:id="@+id/answer1_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer13"/>
                <RadioButton
                    android:id="@+id/answer1_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer14"/>
            </RadioGroup>

            <TextView
                android:id="@+id/preg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/quest2"
                android:textSize="16sp"/>
            <RadioGroup
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/answer2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1"/>
                <RadioButton
                    android:id="@+id/answer2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2" />
                <RadioButton
                    android:id="@+id/answer2_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3"/>
            </RadioGroup>

            <TextView
                android:id="@+id/preg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/quest3"
                android:textSize="16sp"/>
            <RadioGroup
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/answer3_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1"/>
                <RadioButton
                    android:id="@+id/answer3_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2"/>
                <RadioButton
                    android:id="@+id/answer3_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3"/>
            </RadioGroup>

            <TextView
                android:id="@+id/preg4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/quest4"
                android:textSize="16sp"/>
            <RadioGroup
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/answer4_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1"/>
                <RadioButton
                    android:id="@+id/answer4_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2"/>
                <RadioButton
                    android:id="@+id/answer4_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3"/>
            </RadioGroup>

            <TextView
                android:id="@+id/preg5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/quest5"
                android:textSize="16sp"/>
            <RadioGroup
                android:id="@+id/answer5"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/answer5_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1"
                    tools:ignore="DuplicateIds"/>
                <RadioButton
                    android:id="@+id/answer5_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2"/>
                <RadioButton
                    android:id="@+id/answer5_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer3"/>
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:onClick="goToHome"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>