<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.config.ConfigFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="190dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="100dp"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/apisBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToMain"
                android:text="@string/apis" />
            <Button
                android:id="@+id/paramsBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:onClick="goToCreateAccount"
                android:text="@string/params" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>